<resources>
    <string name="app_name">Recipes</string>
    <string name="signIn">Sign in</string>
    <string name="title_activity_home_page">Recipes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_logout">Log out</string>
    <string name="ownSearchHint">Search</string>
    <string name="addNewRecipe">Add new recipe</string>
    <string name="hintRecipeName">Name</string>
    <string name="hintRecipeSource">Source</string>
    <string name="hintRecipeUrl">Url</string>
    <string name="hintRecipeTime">Preparation time (min)</string>
    <string name="submitAddRecipe">Add</string>
    <string name="urlExample">http://example.com</string>
    <string name="pick_an_image">Pick from gallery</string>
    <string name="prepTime">Preparation time</string>
    <string name="recipeSource">Source of recipe</string>
    <string name="filter">Filter</string>
    <string name="filter_recipes">Filter recipes</string>
    <string name="main_ingredient">Main ingredient</string>
    <string name="Meal">Meal</string>
    <string name="Sides">Sides</string>
    <string name="Special">Special</string>
    <string name="show_results">Show results</string>
    <string name="dessert">Dessert</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="fish">Fish</string>
    <string name="chicken">Chicken</string>
    <string name="meat">Meat</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="potato">Potato</string>
    <string name="pasta">Pasta</string>
    <string name="rice">Rice</string>
    <string name="gluten_free">Gluten-free</string>
    <string name="grain">Grain</string>
    <string name="eggless">Eggless</string>
    <string name="milk_free">Milk-free</string>
    <string name="closeRecipeForm">Close recipe form</string>
    <string name="goBack">Go back</string>
    <string name="DailyRecommendation">Daily Recommendation</string>
</resources>