<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bottomSheetBackButton"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/goBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/addNewRecipe"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bottomSheetCloseButton"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/closeRecipeForm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:textColorHint="@color/colorSecondaryText"
            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRecipeName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/input_layout_background"
                android:gravity="bottom"
                android:hint="@string/hintRecipeName"
                android:inputType="text"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:textColorHint="@color/colorSecondaryText"
            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRecipeSource"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/input_layout_background"
                android:gravity="bottom"
                android:hint="@string/hintRecipeSource"
                android:inputType="text"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingHorizontal="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:textColorHint="@color/colorSecondaryText"
            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRecipeUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_layout_background"
                android:gravity="bottom"
                android:hint="@string/hintRecipeUrl"
                android:inputType="textUri"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingHorizontal="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:textColorHint="@color/colorSecondaryText"
            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRecipeTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_layout_background"
                android:gravity="bottom"
                android:hint="@string/hintRecipeTime"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingHorizontal="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:theme="@style/Theme.MaterialComponents.Light">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/vegetarian" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/meat" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chicken" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/fish" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/breakfast" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lunch" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/dinner" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/snack" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dessert"
                style="@style/CustomChipStyle"
                android:checkable="true" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/potato" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/pasta" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/rice" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/grain" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/gluten_free" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/eggless" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/milk_free" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/save_recipe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:text="@string/submitAddRecipe"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </LinearLayout>


</LinearLayout>